--- a/.github/workflows/action_plain_unit_tests.yml
+++ b/.github/workflows/action_plain_unit_tests.yml
@@ -27,11 +27,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+        shell: bash
+        run: |
+           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - name: Set up Python ${{ inputs.python-version }}
         uses: actions/setup-python@v5
         with:
