Have to do it this way :-/

--- a/.github/workflows/action_plain_unit_tests.yml
+++ b/.github/workflows/action_plain_unit_tests.yml
@@ -9,23 +9,14 @@ on:
       python-version:
         required: true
         type: string
+      model:
+        required: true
+        type: string
 
 
 jobs:
   run-plain-unit-tests:
-    strategy:
-      fail-fast: false # Don't cancel all on first failure
-      matrix:
-        model:
-          - "gpt2cpu"
-          - "phi2cpu"
-          # - "transformers_mistral_7b" See Issue 713
-          - "hfllama7b"
-          - "hfllama_mistral_7b"
-          - "phi3cpu-mini-4k-instruct"
-
     runs-on: ${{ inputs.os }}
-    if: ${{ ! ((matrix.model == "phi3cpu-mini-4k-instruct") && ((inputs.os == "win-latest") || (inputs.os == "macos-12")) }}
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
