--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -59,9 +59,20 @@ jobs:
 
   unit-tests-linux-python-latest:
     uses: ./.github/workflows/action_plain_unit_tests.yml
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        model:
+          - "gpt2cpu"
+          - "phi2cpu"
+          # - "transformers_mistral_7b" See Issue 713
+          - "hfllama7b"
+          - "hfllama_mistral_7b"
+          - "phi3cpu-mini-4k-instruct"
     with:
       os: ubuntu-latest
       python-version: "3.12"
+      model: ${{ matrix.model }}
 
   end-stage-1:
     needs:
@@ -91,10 +102,18 @@ jobs:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        model:
+          - "gpt2cpu"
+          - "phi2cpu"
+          # - "transformers_mistral_7b" See Issue 713
+          - "hfllama7b"
+          - "hfllama_mistral_7b"
+          - "phi3cpu-mini-4k-instruct"
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: ubuntu-latest
       python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
 
   server-tests:
     needs: end-stage-1
@@ -121,27 +140,25 @@ jobs:
 # Third Stage ==============================================================
 # Windows and MacOS, plus other GPU Linux tests
 
-  unit-tests-win:
+  unit-tests-other-os:
     needs: end-stage-2
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
+        os: [ "windows-latest", "macos-12" ]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        model:
+          - "gpt2cpu"
+          - "phi2cpu"
+          # - "transformers_mistral_7b" See Issue 713
+          - "hfllama7b"
+          - "hfllama_mistral_7b"
+          # - "phi3cpu-mini-4k-instruct" Gives trouble on Win/MacOS
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: windows-latest
       python-version: ${{ matrix.python-version }}
-
-  unit-tests-mac:
-    needs: end-stage-2
-    strategy:
-      fail-fast: false # Don't cancel all on first failure
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    uses: ./.github/workflows/action_plain_unit_tests.yml
-    with:
-      os: macos-12
-      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
 
   unit-tests-gpu-python-others:
     needs: end-stage-2
