--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -70,7 +70,7 @@ jobs:
           - "hfllama_mistral_7b"
           - "phi3cpu-mini-4k-instruct"
     with:
-      os: ubuntu-latest
+      os: Linux_Latest
       python-version: "3.12"
       model: ${{ matrix.model }}
 
@@ -111,7 +111,7 @@ jobs:
           - "phi3cpu-mini-4k-instruct"
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
-      os: ubuntu-latest
+      os: Linux_Large
       python-version: ${{ matrix.python-version }}
       model: ${{ matrix.model }}
 
