--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -43,6 +43,11 @@ jobs:
       matrix:
         include: ${{ fromJson(needs.generate-wheels-matrix.outputs.include) }}
     runs-on: ${{ matrix.os }}
+    
+    env:
+      CIBW_BUILD_VERBOSITY: 1
+      CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -96,6 +101,7 @@ jobs:
         run: |
           python -m pip install build
           python -m build --sdist
+
       - name: Upload sdist
         uses: actions/upload-artifact@v3
         with:
