--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -28,7 +28,7 @@ jobs:
               cibuildwheel --print-build-identifiers --platform linux \
               | jq -nRc '{"only": inputs, "os": "ubuntu-latest"}' \
               && cibuildwheel --print-build-identifiers --platform macos \
-              | jq -nRc '{"only": inputs, "os": "macos-latest"}' \
+              | jq -nRc '{"only": inputs, "os": "macos-12"}' \
               # && cibuildwheel --print-build-identifiers --platform windows \
               # | jq -nRc '{"only": inputs, "os": "windows-latest"}'
             } | jq -sc
