--- a/.github/workflows/pypi_upload.yml
+++ b/.github/workflows/pypi_upload.yml
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
-          name: bdist_files_${{ matrix.include }}
+          name: bdist_files_${{ matrix.os }}_${{ strategy.job-index }}
 
   build_sdist:
     name: Build source distribution
@@ -119,12 +119,13 @@ jobs:
     runs-on: ubuntu-latest
     # if: startsWith(github.ref, 'refs/tags')
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: bdist_files
+          pattern: bdist_files_*
+          merge-multiple: true
           path: dist
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: sdist_files
           path: dist
