--- a/.github/workflows/action_gpu_unit_tests.yml
+++ b/.github/workflows/action_gpu_unit_tests.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ matrix.model }} \
-            -m "not (server or needs_credentials)" \
+            -m "not (server or needs_credentials or notebooks)" \
             ./tests/
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
