--- a/.github/workflows/action_plain_unit_tests.yml
+++ b/.github/workflows/action_plain_unit_tests.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
           --selected_model ${{ inputs.model }} \
-          -m "not (needs_credentials or use_gpu or server)" \
+          -m "not (needs_credentials or use_gpu or server or notebooks)" \
           ./tests/
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
