Update workflow with environment

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -77,6 +77,9 @@ jobs:
           AZURE_AI_STUDIO_LLAMA3_CHAT_ENDPOINT: ${{ vars.AZURE_AI_STUDIO_LLAMA3_CHAT_ENDPOINT }}
           AZURE_AI_STUDIO_LLAMA3_CHAT_DEPLOYMENT: ${{ vars.AZURE_AI_STUDIO_LLAMA3_CHAT_DEPLOYMENT }}
           AZURE_AI_STUDIO_LLAMA3_CHAT_KEY: ${{ secrets.AZURE_AI_STUDIO_LLAMA3_CHAT_KEY }}
+          AZURE_AI_STUDIO_MISTRAL_COMPLETION_ENDPOINT: ${{ vars.AZURE_AI_STUDIO_MISTRAL_COMPLETION_ENDPOINT }}
+          AZURE_AI_STUDIO_MISTRAL_COMPLETION_DEPLOYMENT: ${{ vars.AZURE_AI_STUDIO_MISTRAL_COMPLETION_DEPLOYMENT }}
+          AZURE_AI_STUDIO_MISTRAL_COMPLETION_KEY: ${{ secrets.AZURE_AI_STUDIO_MISTRAL_COMPLETION_KEY }}
         run: |
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
             -m "needs_credentials and (not notebooks)" \
