--- a/.github/workflows/action_gpu_unit_tests.yml
+++ b/.github/workflows/action_gpu_unit_tests.yml
@@ -61,11 +61,11 @@ jobs:
         run: |
           python -c "import torch; assert torch.cuda.is_available()"
       - name: Run tests (except server) for ${{ matrix.model }}
-        run: |
+        run: | 
           pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ matrix.model }} \
             -m "not (server or needs_credentials or notebooks)" \
-            ./tests/
+            ./tests/models/test_llama_cpp.py # NO MERGE!
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
