--- a/.github/workflows/action_gpu_unit_tests.yml
+++ b/.github/workflows/action_gpu_unit_tests.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -e .[schemas,test]
+          pip install -e .[schemas,test,bench]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Other dependencies
         run: |
