--- a/.github/workflows/action_server_tests.yml
+++ b/.github/workflows/action_server_tests.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -e .[all,test]
+          pip install -e .[all,test,bench]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run server tests
         shell: bash
