Adjustment to github workflow for llama-cpp-python install.
Uninstalls first, then installs specific version of
llama-cpp-python in case the bench tag has installed it already.

--- a/.github/workflows/action_plain_unit_tests.yml
+++ b/.github/workflows/action_plain_unit_tests.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Install model-specific dependencies
         run: |
           pip install sentencepiece
+          pip uninstall llama-cpp-python
           pip install "llama-cpp-python!=0.2.58"
       - name: Run tests (except server)
         shell: bash
