--- a/.github/workflows/action_gpu_unit_tests.yml
+++ b/.github/workflows/action_gpu_unit_tests.yml
@@ -56,6 +56,7 @@ jobs:
       - name: GPU pip installs
         run: |
           pip install accelerate
+          pip uninstall llama-cpp-python
           CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75"
       - name: Check GPU available
         run: |
