--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Ensure NVIDIA SDK available
         run: |
           # We are having trouble with CUDA toolkit 12.5.....
-          sudo apt satisfy -y "cuda-toolkit (<12.4)"
+          sudo apt satisfy -y "cuda-toolkit (<=12.4)"
           echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: |
