--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ markers = [
 
 [tool.black]
 line-length = 88
-target_version = ['py38', 'py39', 'py310', 'py311', 'py312']
+target_version = ['py39', 'py310', 'py311', 'py312']
 
 [tool.isort]
 profile = "black"
