--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -144,7 +144,7 @@ jobs:
 # Third Stage ==============================================================
 # Windows and MacOS, plus other GPU Linux tests
   
-  unit-tests-mac:
+  unit-tests-mac-x86:
     needs: end-stage-2
     strategy:
       fail-fast: false # Don't cancel all on first failure
@@ -161,6 +161,26 @@ jobs:
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: macos-12
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
+
+  unit-tests-mac-arm:
+    needs: end-stage-2
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        model:
+          - "gpt2cpu"
+          - "phi2cpu"
+          # - "transformers_mistral_7b" See Issue 713
+          - "hfllama7b"
+          - "hfllama_mistral_7b"
+          # - "transformers_phi3cpu_mini_4k_instruct" Gives trouble on MacOS
+          - "hfllama_phi3cpu_mini_4k_instruct"
+    uses: ./.github/workflows/action_plain_unit_tests.yml
+    with:
+      os: macos-latest
       python-version: ${{ matrix.python-version }}
       model: ${{ matrix.model }}
 
