Switch server test OS

--- a/.github/workflows/workflow-pr-gate.yml
+++ b/.github/workflows/workflow-pr-gate.yml
@@ -126,7 +126,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
     uses: ./.github/workflows/action_server_tests.yml
     with:
-      os: ubuntu-latest
+      os: windows-latest
       python-version: ${{ matrix.python-version }}
 
 
