Check the others

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -31,8 +31,12 @@ jobs:
       - name: GUID Check
         env:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         run:
           python -c "import os; value = os.getenv('AZURE_CLIENT_ID'); print(' '.join(value))"
+          python -c "import os; value = os.getenv('AZURE_TENANT_ID'); print(' '.join(value))"
+          python -c "import os; value = os.getenv('AZURE_SUBSCRIPTION_ID'); print(' '.join(value))"
 
       - name: 'Az CLI login'
         uses: azure/login@v1
