--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -33,7 +33,7 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        run:
+        run: |
           python -c "import os; value = os.getenv('AZURE_CLIENT_ID'); print(' '.join(value))"
           python -c "import os; value = os.getenv('AZURE_TENANT_ID'); print(' '.join(value))"
           python -c "import os; value = os.getenv('AZURE_SUBSCRIPTION_ID'); print(' '.join(value))"
