--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -13,6 +13,10 @@ on:
     # Run at 1030 UTC every day
     - cron:  '30 10 * * *'
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
 
