bitsandbytes to yml

--- a/.github/workflows/action_gpu_basic_tests.yml
+++ b/.github/workflows/action_gpu_basic_tests.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           pip install accelerate einops triton
           echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
-          pip install packaging setuptools wheel
+          pip install bitsandbytes packaging setuptools wheel
           pip install flash-attn --no-build-isolation
           echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
           pip uninstall -y llama-cpp-python
